--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,6 @@
-beautifulsoup4==4.11.1
-certifi==2021.10.8
-charset-normalizer==2.0.12
-decorator==5.1.1
-ffmpeg-python==0.2.0
-future==0.18.2
-idna==3.3
-packaging==21.3
-pyparsing==3.0.8
-python-telegram-bot==13.11
-pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-requests==2.27.1
-six==1.16.0
-soupsieve==2.3.2.post1
-tornado==6.1
-tzdata==2022.1
-tzlocal==4.2
-urllib3==1.26.9
-validators==0.18.2
+beautifulsoup4
+ffmpeg-python
+python-telegram-bot
+requests
+validators
+cachetools
