--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pylint
+        pip install flake8 pytest pylint pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -39,4 +39,4 @@ jobs:
         pylint $(git ls-files '*.py') --disable=missing-docstring,import-error,too-many-branches,broad-except
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov=.
