--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-beautifulsoup4
-cachetools
-ffmpeg-python
-python-telegram-bot
-requests
-validators
+beautifulsoup4==4.11.1
+cachetools==4.2.2
+ffmpeg-python==0.2.0
+python-telegram-bot==13.14
+requests==2.28.1
+validators==0.20.0
