--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,7 @@
-anyio==3.6.2
-beautifulsoup4==4.11.2
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.0.1
-decorator==5.1.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==0.16.3
-httpx==0.23.3
-hyperframe==6.0.1
-idna==3.4
-pyee==9.0.4
-python-ffmpeg==2.0.2
-python-telegram-bot==20.1
-requests==2.28.2
-rfc3986==1.5.0
-sniffio==1.3.0
-soupsieve==2.4
-typing_extensions==4.5.0
-urllib3==1.26.14
+beautifulsoup4==4.12.2
+cachetools==5.3.1
+python-dotenv==1.0.0
+python-ffmpeg==2.0.4
+python-telegram-bot==20.3
+requests==2.31.0
 validators==0.20.0
