--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.11.4]
+        python-version: [3.11.6]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,8 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install -r requirements-tests.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
