--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,15 @@
-altair==5.1.1
-anyio==4.0.0
-attrs==23.1.0
-beautifulsoup4==4.12.2
-black==23.9.0
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.7.22
-cffi==1.15.1
-cfgv==3.4.0
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-coverage==7.3.1
-decorator==5.1.1
-distlib==0.3.7
-exceptiongroup==1.1.3
-filelock==3.12.3
-gitdb==4.0.10
-GitPython==3.1.37
-h11==0.14.0
-httpcore==0.17.3
-httpx==0.24.1
-identify==2.5.27
-idna==3.4
-importlib-metadata==6.8.0
-iniconfig==2.0.0
-Jinja2==3.1.2
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-lz4==4.3.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-mypy-extensions==1.0.0
-nodeenv==1.8.0
-outcome==1.2.0
-packaging==23.1
-pathspec==0.11.2
-Pillow==10.0.1
-platformdirs==3.10.0
-pluggy==1.3.0
-pre-commit==3.4.0
-protobuf==4.24.3
-pyarrow==13.0.0
-pycparser==2.21
-pycryptodomex==3.18.0
-pydeck==0.8.0
-pyee==11.0.0
-Pygments==2.16.1
-Pympler==1.0.1
-PySocks==1.7.1
-pytest==7.4.2
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-pytest-mock==3.11.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-ffmpeg==2.0.4
-python-telegram-bot==20.5
-pytz==2023.3.post1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0.1
-referencing==0.30.2
+beautifulsoup4==4.12.3
+black==24.2.0
+cachetools==5.3.3
+celery==5.3.6
+pip-upgrader==1.4.15
+pre-commit==3.6.2
+pytest==8.1.1
+python-dotenv==1.0.1
+python-ffmpeg==2.0.10
+python-telegram-bot==21.0.1
 requests==2.31.0
-rfc3986==2.0.0
-rich==13.5.2
-rpds-py==0.10.2
-ruff==0.0.287
-selenium==4.12.0
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-tenacity==8.2.3
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
-trio==0.22.2
-trio-websocket==0.10.4
-typing_extensions==4.8.0rc1
-tzdata==2023.3
-tzlocal==4.3.1
-urllib3==2.0.7
+ruff==0.3.2
+selenium==4.18.1
 validators==0.22.0
-virtualenv==20.24.5
-watchdog==3.0.0
-webdriver-manager==4.0.0
-wsproto==1.2.0
-zipp==3.16.2
+webdriver-manager==4.0.1
