--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ ruff==0.3.2
 selenium==4.18.1
 validators==0.22.0
 webdriver-manager==4.0.1
+pytest-asyncio==0.23.5.post1
+pytest-cov==4.1.0
+pytest-mock==3.12.0
