--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,14 +29,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
     - name: Install dependencies
-      run: |
-        poetry install
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        poetry run flake8 . --count --exit-zero --max-complexity=15 --max-line-length=127 --statistics --ignore=E203
-    - name: Test with pytest
-      run: |
-        poetry run pytest
+      run: poetry install
+    - name: Lint check with Ruff
+      run: poetry run ruff check --output-format=github .
+    - name: Test with Pytest
+      run: poetry run pytest
