--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,14 @@ repos:
     - id: end-of-file-fixer
     - id: check-yaml
     - id: check-added-large-files
-- repo: https://github.com/psf/black
+- repo: https://github.com/psf/black-pre-commit-mirror
   rev: 24.4.2
   hooks:
     - id: black
       language_version: python3.12
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.4.7
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.4.9
   hooks:
     - id: ruff
-      args: ["--fix"]
+      args: [ --fix ]
+    - id: ruff-format
