--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Lint check with Ruff
       run: poetry run ruff check --output-format=github .
     - name: Test with Pytest
-      run: poetry run pytest
+      run: poetry run pytest -n auto
