--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,13 @@ cachetools = "^5.3.3"
 celery = "^5.4.0"
 python = "^3.12"
 python-dotenv = "^1.0.1"
-python-ffmpeg = "^2.0.12"
 python-telegram-bot = "^21.2"
 requests = "^2.32.3"
-selenium = "^4.21.0"
 validators = "^0.28.3"
-webdriver-manager = "^4.0.1"
 pillow = "^10.3.0"
 moviepy = "^1.0.3"
 pytest-xdist = "^3.6.1"
+instaloader = "^4.11"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
