--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,16 +10,18 @@ package-mode = false
 [tool.poetry.dependencies]
 beautifulsoup4 = "^4.12.3"
 cachetools = "^5.3.3"
-celery = "^5.4.0"
 python = "^3.11"
 python-dotenv = "^1.0.1"
-python-telegram-bot = "^21.2"
+python-telegram-bot = {extras = ["job-queue"], version = "^21.3"}
 requests = "^2.32.3"
 validators = "^0.28.3"
 pillow = "^10.3.0"
 pytest-xdist = "^3.6.1"
 instaloader = "^4.11"
 dev-moviepy = "^2.0.0.dev0"
+
+[tool.poetry.extras]
+python-telegram-bot = ["job-queue"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
@@ -29,7 +31,6 @@ pytest-asyncio = "^0.23.7"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
 ruff = "^0.4.7"
-
 
 [build-system]
 requires = ["poetry-core"]
