--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ cachetools = "^5.3.3"
 python = "^3.11"
 python-dotenv = "^1.0.1"
 python-telegram-bot = {extras = ["job-queue"], version = "^21.3"}
-requests = "^2.32.3"
 validators = "^0.28.3"
 pillow = "^10.3.0"
 pytest-xdist = "^3.6.1"
 instaloader = "^4.11"
 dev-moviepy = "^2.0.0.dev0"
+httpx = "^0.27.0"
 
 [tool.poetry.extras]
 python-telegram-bot = ["job-queue"]
@@ -31,6 +31,7 @@ pytest-asyncio = "^0.23.7"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
 ruff = "^0.4.7"
+pytest-httpx = "^0.30.0"
 
 [build-system]
 requires = ["poetry-core"]
