--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "memes2telegram"
-version = "0.1.1"
+version = "1.0.0"
 description = "Simple Telegram chat bot that downloads GIF, WEBM, and MP4 by URL and sends them back as properly encoded Telegram MP4 videos."
-authors = ["ChaikaBogdan"]
+authors = ["Bogdan Bashev"]
 license = "MIT"
 readme = "README.md"
 package-mode = false
