--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,19 +19,19 @@ pillow = "^10.4.0"
 dev-moviepy = "^2.0.0.dev0"
 httpx = "^0.27.2"
 yt-dlp = {extras = ["default"], version = "^2024.9.27"}
-instaloader = {git = "https://github.com/Aristarhys/instaloader.git"}
+instaloader = "^4.13.2"
 
 [tool.poetry.extras]
 python-telegram-bot = ["job-queue"]
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.8.0"
-pre-commit = "^3.8.0"
+black = "^24.10.0"
+pre-commit = "<=5.0.0"
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
-ruff = "^0.6.8"
+ruff = "^0.7.1"
 pytest-httpx = "^0.32.0"
 pytest-xdist = "^3.6.1"
 
