--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,11 +26,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Poetry
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip wheel setuptools
         pip install poetry
     - name: Install dependencies
       run: poetry install
     - name: Lint check with Ruff
       run: poetry run ruff check --output-format=github .
     - name: Test with Pytest
-      run: poetry run pytest -n auto
+      run: poetry run pytest
